--- a/style/mycss.css
+++ b/style/mycss.css
@@ -1,15 +1,17 @@
 body{
     width: 100%;
-    background-color: #98d6ed;
+    background-color: #83a5af;
     background-repeat: repeat;
     background-attachment: fixed;
-    font-family: Verdana, Geneva, sans-serif;
+    font-family: "Comic Sans MS", cursive, sans-serif;
     background-image: url("../assets/img/back.JPEG");
 }
 #main{
     background-color: #d9f5ff81;
     border-radius: 10px;
     padding: 10px;
+    animation-name: margin-top-to-0;
+    animation-duration: 500ms;
 }
 .container{
     margin: auto;
@@ -19,6 +21,8 @@ header{
     margin: auto;
     margin-bottom: 10px;
     max-width: 800px;
+    animation-name: margin-left-0-to-auto;
+    animation-duration: 500ms;
 }
 header ul {
     list-style-type: none;
@@ -26,7 +30,9 @@ header ul {
     padding: 0;
     overflow: hidden;
     background-color: #d9f5ff81;
-    border-radius: 10px
+    border-radius: 10px;
+    animation-name: margin-left-0-to-auto;
+    animation-duration: 500ms;
   }
   
 header li {
@@ -40,21 +46,69 @@ header a {
     text-decoration: none;
   }
 header #me{
-    float: right;
+    width: 200px; float:right; 
+   
 }
-  
+header .active{
+    background-color: #d9f5ffaf;
+}
+@keyframes example {
+    from {background-color: #d9f5ff81;}
+    to {background-color: #d9f5ffaf;}
+  }
+
+  @keyframes dissapear {
+    from {width: 100%;}
+    to {width: 0%;}
+  }
+
+  @keyframes margin-top-to-0 {
+    from {margin-top: 200px;}
+    to {margin-top: 10px;}
+  }
+  @keyframes margin-left-0-to-auto {
+    from {width: 700px;}
+    to {width: 800px;}
+  }
   /* Change the link color to #111 (black) on hover */
-header ul a:hover {
-background-color: #a0ddfa;
+header ul a:hover,header .dropdown:hover .dropbtn {
+background-color: #d9f5ff81;
+animation-name: example;
+animation-duration: 2s;
 }
+header .dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: #d9f5ffd5;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+header .dropdown:hover .dropdown-content{
+    display: block;
+}
+
+header .dropdown{
+    float: left;
+    overflow: hidden;
+}
+header .dropbtn{
+    border: none;
+    outline: none;
+    font-size: inherit;
+    padding: 14px 16px;
+    background-color: #0088b900;
+}
+
+
+
 
 main ol{
     padding: 0;
     margin: 15px;
+  
 }
 
 main a:hover{
-    color: rgb(0, 204, 255);
+    color: rgb(0, 114, 143);
     text-decoration: none;
 }
 main a{
@@ -69,8 +123,13 @@ main .postimg{
     border-radius: 10px;
 }
 pre{
-    background-color: rgba(250, 235, 215, 0.349);
+    background-color: rgba(247, 247, 247, 0.349);
     border-radius: 5px;
     padding: 10px;
-    overflow-x: scroll;
+    overflow-x: auto;
+}
+#profile-pic{
+    animation-name: dissapear;
+    animation-duration: 3s;
+    margin: auto;
 }
